--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 				<h1>Task Manager</h1>
 			</div>
 			<div id="task-form">
-				<form ng-submit="addTask(task)">
+				<form name="addTask" ng-submit="addTask(task)" ng-show="showAdd">
 					<label>Type of Task</label>
-					<select></select>
+					<select>
+						<option ng-repeat="type in types" ng-model="task.taskType">{{type}}</option>
+					</select>
 					<label>Task Name</label>
-					<input type="text" ng-model="task.taskName" value="{{taskNameInput}}">
+					<input maxlength="24" name="name" type="text" ng-model="task.taskName" value="{{taskNameInput}}">
 					<label>Task Description</label>
 					<textarea ng-model="task.taskDesc"></textarea>
 					<button>
@@ -26,26 +28,32 @@
 				</form>
 
 <!-- Show/Populate this when existing tasks are clicked and hide new task form  -->
-				<form ng-submit="editSubmit(task)">
-					<label>Type of Task</label>
-					<select></select>
-					<label>Task Name</label>
-					<input ng-model="taskObj.name" type="text">
-					<label>Task Description</label>
-					<textarea ng-model="taskObj.description" ></textarea>
-					<button type="submit">
-						Submit
-					</button>
-					
-				</form>
-				<button ng-click="deleteTask(task)">Delete</button>
+				<div ng-show="showEdit">
+					<form name="editTask" ng-submit="editSubmit(task)">
+						<label>Type of Task</label>
+						<select>
+							<option ng-repeat="type in types" ng-model="taskObj.type">{{type}}</option>
+						</select>
+						<label>Task Name</label>
+						<input maxlength="24" name="name" ng-model="taskObj.name" type="text">
+						<label>Task Description</label>
+						<textarea ng-model="taskObj.description" ></textarea>
+						<button>
+							Submit
+						</button>
+					</form>
+					<button ng-click="deleteTask(task)">Delete</button>
+				</div>
 
 
 			</div>
 			<div id="task-list">
 				<label>Your Current Tasks:</label>
-				<li ng-repeat="t in taskList" ng-click="edit(task, $index)">
+				<li ng-repeat="t in taskList" ng-click="edit(task, $index)" ng-show="haveTasks">
 		      {{t.name}} Created {{t.date | date:'h:mm a'}} on {{t.date | date:'MMMM dd, yyyy'}}
+	      </li>
+	      <li ng-hide="haveTasks">
+	      No tasks
 	      </li>
 
 			</div>
