--- a/index.html
+++ b/index.html
@@ -8,39 +8,41 @@
 
 	</head>
 	<body>
-		<div class="row" ng-controller="TaskListCtrl">
+		<div class="row container" ng-controller="TaskListCtrl">
 			<div id="header">
 				<h1>Task Manager</h1>
+				<hr>
 			</div>
-			<div id="task-form">
-
-        <form ng-submit="addTask(task)" ng-show="showAdd">
-          <label>Type of Task</label>
-					<select>
-						<option ng-repeat="type in types" ng-model="task.taskType">{{type}}</option>
-					</select>
-          <label>Task Name</label>
-          <input maxlength="24" type="text" ng-model="task.taskName" value="{{taskNameInput}}">
-          <label>Task Description</label>
-          <textarea ng-model="task.taskDesc"></textarea>
-          <button>
-            Add
-          </button>
-        </form>
+			<div id="task-form" class="small-6 large-6 columns">
+				<div >
+	        <form ng-submit="addTask(task)" ng-show="showAdd">
+	          <label>Type of Task</label>
+						<select ng-model="task.taskType">
+							<option ng-repeat="type in types">{{type}}</option>
+						</select>
+	          <label>Task Name</label>
+	          <input maxlength="24" type="text" ng-model="task.taskName" value="{{taskNameInput}}">
+	          <label>Task Description</label>
+	          <textarea ng-model="task.taskDesc"></textarea>
+	          <button>
+	            Add
+	          </button>
+	        </form>
+	      </div>
 
 <!-- Show/Populate this when existing tasks are clicked and hide new task form  -->
 				<div ng-show="showEdit">
 					<form ng-submit="editSubmit(task)">
 						<label>Type of Task</label>
-						<select>
-							<option ng-repeat="type in types" ng-model="taskObj.type">{{type}}</option>
+						<select ng-model="taskObj.type">
+							<option ng-repeat="type in types">{{type}}</option>
 						</select>
 						<label>Task Name</label>
 						<input maxlength="24" name="name" ng-model="taskObj.name" type="text">
 						<label>Task Description</label>
 						<textarea ng-model="taskObj.description" ></textarea>
 						<button>
-							Submit
+							Edit
 						</button>
 					</form>
 					<button ng-click="deleteTask(task)">Delete</button>
@@ -48,14 +50,18 @@
 
 
 			</div>
-			<div id="task-list">
+			<div id="task-list" class="small-6 large-6 columns">
 				<label>Your Current Tasks:</label>
-				<li ng-repeat="t in taskList" ng-click="edit(task, $index)" ng-show="haveTasks">
-		      {{t.name}} Created {{t.date | date:'h:mm a'}} on {{t.date | date:'MMMM dd, yyyy'}}
-	      </li>
-	      <li ng-hide="haveTasks">
-	      No tasks
-	      </li>
+				<ol>
+					<li ng-repeat="t in taskList" ng-click="edit(task, $index)" ng-show="haveTasks" class="taskItem" ng-class="{'color-red': t.type === 'Bug Fix'}">
+			      {{t.name}} Created {{t.date | date:'h:mm a'}} on {{t.date | date:'MMMM dd, yyyy'}}
+		      </li>
+	      </ol>
+	      <ul ng-hide="haveTasks" class="noTasks">
+		      <li>
+		      No tasks
+		      </li>
+	      </ul>
 
 			</div>
 		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
