--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<div id="task-form" class="small-6 large-6 columns">
 				<div >
-	        <form ng-submit="addTask(task)" ng-show="showAdd">
+	        <form name="newTaskForm" ng-submit="addTask(task)" ng-show="showAdd" >
 	          <label>Type of Task</label>
 						<select ng-model="task.taskType">
 							<option ng-repeat="type in types">{{type}}</option>
@@ -24,7 +24,7 @@
 	          <input maxlength="24" type="text" ng-model="task.taskName" value="{{taskNameInput}}">
 	          <label>Task Description</label>
 	          <textarea ng-model="task.taskDesc"></textarea>
-	          <button>
+	          <button ng-click="newTaskForm.$setPristine()">
 	            Add
 	          </button>
 	        </form>
@@ -42,10 +42,17 @@
 						<label>Task Description</label>
 						<textarea ng-model="taskObj.description" ></textarea>
 						<button>
-							Edit
+							Finished
 						</button>
 					</form>
-					<button ng-click="deleteTask(task)">Delete</button>
+					<a href="#" data-reveal-id="deleteModal"><button>Delete</button></a>
+				</div>
+
+				<div id="deleteModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+				  <h2 id="modalTitle">Warning:</h2>
+				  <p>Are you sure you want to delete this task?</p>
+					<button ng-click="deleteTask(task)" class="closeButton">Yes, delete this wretched task.</button>
+					<button class="closeButton">Cancel</button>
 				</div>
 
 
