Require all fields

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	          <input maxlength="24" type="text" ng-model="task.taskName" value="{{taskNameInput}}">
 	          <label>Task Description</label>
 	          <textarea ng-model="task.taskDesc"></textarea>
-	          <button ng-click="newTaskForm.$setPristine()">
+	          <button class="addButton">
 	            Add
 	          </button>
 	        </form>
